added information on different places to get used books

--- a/app/templates/books.html
+++ b/app/templates/books.html
@@ -76,8 +76,7 @@
                           </div>
                           <div class="card-body">
                           <p>You shouldn't always buy new books as used books can be a great alternative. <br>
-                          Buying used books can help save money. A common place to buy used books is <a href="ebay.com">ebay</a></p>. <br>
-                          You can either use the buy it now feature or bid on it. Give it a go.
+                          Buying used books can help save money. A common place to buy used books is ebay. You can either use the buy it now feature or bid on it. <a href="ebay.com">Give it a go</a></p>
                         </div>
                     </div>
                 </div>
@@ -106,9 +105,8 @@
                             </div>
                           </div>
                           <div class="card-body">
-                          <p>A lot of universities have marketplaces which are usually big Facebook groups where they list things they don't need. <b>
-                          A person that already took the class you're trying to take might list the book you need for a cheap price. Try to snag the book you need, <br>
-                        Some people may not know about the existance of such places, but know you know. Go and try to find your universities marketplace group and save some money. <a href="facebook.com">Check it out</a></p>. <br></p></p>
+                          <p>A lot of universities have marketplaces which are usually big Facebook groups where they list things they don't need. <br>
+                          A person that already took the class you're trying to take might list the book you need for a cheap price. Try to snag the book you need. Some people may not know about the existance of such places, but know you know. Go and try to find your universities marketplace group and save some money. <a href="facebook.com">Check it out</a></p>. <br></p></p>
                         </div>
                     </div>
                 </div>
