added transport page

--- a/app/templates/reciepe.html
+++ b/app/templates/reciepe.html
@@ -37,6 +37,7 @@
                     <li class="nav-item"><a href="/freefood" class="nav-link">Free Food Event</a></li>
                     <li class="nav-item active"><a href="/reciepe" class="nav-link">Food Receipts</a></li>
                       <li class="nav-item"><a href="/pricefinder" class="nav-link">Price Finder</a></li>
+                      <li class="nav-item active"><a href="/transportation" class="nav-link">Transportation</a></li>
                   </ul>
                 </div>
               </div>
