--- a/app/templates/transportation.html
+++ b/app/templates/transportation.html
@@ -105,17 +105,22 @@
                           </div>
                           <div>
                             <div  class="card-body">
-                                <a href="https://www.ridemetro.org/Pages/index.aspx" class="card-link">Metro Bus</a>
+                                <a href="https://new.mta.info/schedules/bus" class="card-link">Metro Bus</a>
                                
                             <br/>
                                   
                               </div>
-                              
+                              <div  class="card-body">
+                                <a href="https://new.mta.info/maps" class="card-link">Subway</a>
+                               
+                            <br/>
+                                  
+                              </div>
 
                           </div>
                           
                           <div class="card-body">
-                            <a href="https://www.bikebarn.com/about/buffalo-bayou-rentals-pg1892.htm" class="card-link">Bike Rental</a>
+                            <a href="https://www.citibikenyc.com/how-it-works" class="card-link">Bike Rental</a>
                        <br/>
                              
                          </div>
