--- a/app/templates/housing.html
+++ b/app/templates/housing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>On Campus Jobs</title>
+  <title>Housing</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport" />
